--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@zxing/library": "^0.21.2",
     "axios": "^1.4.0",
     "chalk": "^5.3.0",
+    "date-fns": "4.0.0-beta.1",
     "element-plus": "^2.7.6",
+    "exceljs": "^4.4.0",
     "jquery": "^3.7.1",
     "js-base64": "^3.7.7",
     "jsqr": "^1.4.0",
+    "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "pinia": "^2.1.4",
     "sass": "^1.77.7",
