--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "date-fns": "4.0.0-beta.1",
     "element-plus": "^2.7.6",
     "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
     "js-base64": "^3.7.7",
     "jsqr": "^1.4.0",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
+    "papaparse": "^5.4.1",
     "pinia": "^2.1.4",
     "sass": "^1.77.7",
     "vant": "^4.9.2",
